# weavewiki

./: .gitignore  ARCHITECTURE.en.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.en.md  README.md
.github/workflows/: ci.yml  release.yml
src/: constants.rs  lib.rs  main.rs
src/ai/: budget.rs  metrics.rs  mod.rs  preflight.rs  timeout.rs  tokenizer.rs
src/ai/prompt/: mod.rs
src/ai/provider/: chain.rs  circuit_breaker.rs  claude_code.rs  mod.rs  ollama.rs  openai.rs  prompt_utils.rs
src/ai/validation/: diagram.rs  json_repair.rs  mod.rs  response.rs  scoring.rs
src/analyzer/: mod.rs  structure.rs
src/analyzer/parser/: bash.rs  c.rs  cpp.rs  go.rs  java.rs  kotlin.rs  language.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  traits.rs  typescript.rs
src/analyzer/scanner/: file_scanner.rs  gitignore.rs  mod.rs
src/cli/: mod.rs  progress.rs  util.rs
src/cli/commands/: analyze.rs  clean.rs  config.rs  init.rs  mod.rs  query.rs  status.rs  validate.rs  wiki.rs
src/cli/ui/: mod.rs  output.rs
src/config/: loader.rs  mod.rs  types.rs
src/storage/: database.rs  graph_store.rs  index_generator.rs  mod.rs  schema.sql
src/types/: claim.rs  convention.rs  domain.rs  edge.rs  error.rs  mod.rs  node.rs  project.rs  utils.rs
src/verifier/: cache.rs  common.rs  engine.rs  mod.rs  reporter.rs
src/verifier/rules/: mod.rs  reference.rs  signature.rs
src/wiki/: cache.rs  mod.rs
src/wiki/exhaustive/: checkpoint.rs  llms_txt.rs  mermaid.rs  mod.rs  patterns.rs  session_context.rs  types.rs
src/wiki/exhaustive/bottom_up/: file_analyzer.rs  file_metrics.rs  graph_context.rs  mod.rs  parsers.rs  prioritizer.rs  prompts.rs  types.rs
src/wiki/exhaustive/characterization/: mod.rs  profile.rs  schemas.rs  synthesis.rs
src/wiki/exhaustive/consolidation/: gap_detector.rs  grouping.rs  mod.rs
src/wiki/exhaustive/documentation/: blueprint.rs  hierarchical_generator.rs  mod.rs  structure_agent.rs
src/wiki/exhaustive/refinement/: architecture_docs.rs  doc_generator.rs  mod.rs  quality_scorer.rs
src/wiki/exhaustive/research/: mod.rs  prompts.rs  (+1 more)
(+17 files in other folders)
